# python-a11y-playwright

./: .coveragerc  .gitignore  LICENSE  ReadMe.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yml  release.yml
automateda11y/: axerunner.py  htmlcsrunner.py
automateda11y/a11y/: engine.py
automateda11y/modal/axe/: checks.py  data.py  issues.py  issuetype.py  node.py  relatednode.py  runonly.py  testengine.py  testrunner.py  tooloptions.py
automateda11y/modal/htmlcs/: issue.py  issues.py
automateda11y/pw/: axerunner.py  htmlcsrunner.py  settings.py
automateda11y/pw/modal/: params.py
automateda11y/pw/modal/axe/: checks.py  data.py  issues.py  issuetype.py  node.py  relatednode.py  runonly.py  testenvironment.py  tooloptions.py
automateda11y/pw/modal/htmlcs/: issue.py  issues.py
automateda11y/pw/util/: a11y.py
automateda11y/util/: a11y.py
tests/: axetest.py  htmlcstest.py  test.html  test_axe.py  test_htmlcs.py
