[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-a11y-playwright"
version = "0.0.3"
authors = [
  { name="Sridhar Bandi", email="sridhar.bandi.ece@gmail.com" },
]
license = {text = "MIT License"}
description = "Automate Web Accessibility Testing using AXE/HTMLCS with Playwright Python"
readme = "ReadMe.md"
requires-python = ">=3.7"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
keywords = ["axe", "htmlcs", "accessibility", "playwright"]
dependencies = [
  "marshmallow-dataclass"
]

[project.urls]
Homepage = "https://github.com/automated-a11y/python-a11y-playwright"
repository = "https://github.com/automated-a11y/python-a11y-playwright.git"

[tool.setuptools.packages.find]
exclude = ["tests", "*.tests", "*.tests.*", "tests.*"]

[tool.setuptools.package-data]
"automateda11y.pw.resources" = ["js/*.js"]
